Se reemplaza 'asimetría con 'desigualdad'.

--- a/reference/datamodel.po
+++ b/reference/datamodel.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-01-21 19:59-0600\n"
+"PO-Revision-Date: 2021-01-21 20:07-0600\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2602,7 +2602,7 @@ msgid ""
 "actually get total control over attribute access."
 msgstr ""
 "Tome en cuenta que si el atributo es encontrado a través del mecanismo "
-"normal, :meth:`__getattr__` no es llamado. (Esto es una asimetría "
+"normal, :meth:`__getattr__` no es llamado. (Esto es una desigualdad "
 "intencional entre :meth:`__getattr__` y :meth:`__setattr__`.) Esto es "
 "realizado tanto por motivos de eficiencia y porque de otra manera :meth:"
 "`__getattr__` no tendría manera de acceder a otros atributos de la "
