--- a/reference/datamodel.po
+++ b/reference/datamodel.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-01-21 20:07-0600\n"
+"PO-Revision-Date: 2021-01-21 20:17-0600\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2716,7 +2716,7 @@ msgid ""
 msgstr ""
 "La función ``__dir__`` debe no aceptar argumentos y retornar una secuencia "
 "de cadena de caracteres que representan los nombres accesibles en el módulo. "
-"De existir, esta función anula la búsqueda estándar :func:´dir´ en un módulo."
+"De existir, esta función anula la búsqueda estándar :func:`dir` en un módulo."
 
 #: ../Doc/reference/datamodel.rst:1583
 msgid ""
