se hacen correcciones de ortografía

--- a/whatsnew/3.3.po
+++ b/whatsnew/3.3.po
@@ -100,7 +100,7 @@ msgstr "Nuevas características incorporadas:"
 
 #: ../Doc/whatsnew/3.3.rst:76
 msgid "Reworked :ref:`I/O exception hierarchy <pep-3151>`."
-msgstr "Se reediseña :ref:`Jerarquía de excepción I/O <pep-3151>` ."
+msgstr "Se rediseña :ref:`Jerarquía de excepción I/O <pep-3151>` ."
 
 #: ../Doc/whatsnew/3.3.rst:78
 msgid "Implementation improvements:"
@@ -415,7 +415,7 @@ msgid ""
 "bit more memory, because Python may have to maintain two versions of each "
 "string (in the legacy format and in the new efficient storage)."
 msgstr ""
-"Por parte de la API de C, :pep: `393` es totalmente compatible con versiones "
+"Por parte de la API de C, :pep:`393` es totalmente compatible con versiones "
 "anteriores. La API antigua debería quedar disponible al menos por cinco "
 "años. Las aplicaciones que usan la API antigua no saldrán beneficiadas por "
 "la reducción de memoria, o -peor- podrían usar un bit más de memoria, debido "
@@ -648,7 +648,7 @@ msgstr "Modificación de la ruta del instalador: :ref:`windows-path-mod`"
 
 #: ../Doc/whatsnew/3.3.rst:327
 msgid "PEP 3151: Reworking the OS and IO exception hierarchy"
-msgstr "PEP 3151: Rediseño de la jerarquía de excepciones de IO y OS"
+msgstr "PEP 3151: Reelaborando de la jerarquía de excepciones de IO y OS"
 
 #: ../Doc/whatsnew/3.3.rst:329
 msgid ""
