se corrigen faltas de ortografía

--- a/whatsnew/3.3.po
+++ b/whatsnew/3.3.po
@@ -1287,7 +1287,7 @@ msgstr ""
 "los cargadores, de manera que en el futuro, una vez que los cargadores de "
 "terceros hayan sido actualizados, las personas puedan confiar en la "
 "existencia de éste atributo. Sin embargo, hasta entonces la importación está "
-"configurando la postcarga del módulo."
+"configurando la post carga del módulo."
 
 #: ../Doc/whatsnew/3.3.rst:759
 msgid ""
@@ -2005,9 +2005,7 @@ msgstr "decimal"
 msgid ":issue:`7652` - integrate fast native decimal arithmetic."
 msgstr ":issue:`7652` - integrar la aritmética decimal nativa rápida."
 
-# como pongo limpdec aaqu? e cursiva o q?
 #: ../Doc/whatsnew/3.3.rst:1096
-#, fuzzy
 msgid "C-module and libmpdec written by Stefan Krah."
 msgstr "Módulo C y libmpdec escritos por Stefan Krah."
 
@@ -2309,7 +2307,6 @@ msgstr "max_line_length"
 
 # como pongo linesep? en cursivas o q?
 #: ../Doc/whatsnew/3.3.rst:1215
-#, fuzzy
 msgid ""
 "The maximum length, excluding the linesep character(s), individual lines may "
 "have when a ``Message`` is serialized.  Defaults to 78."
@@ -2320,7 +2317,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.3.rst:1219
 msgid "linesep"
-msgstr "linesep"
+msgstr "*linesep*"
 
 #: ../Doc/whatsnew/3.3.rst:1219
 msgid ""
@@ -2369,7 +2366,7 @@ msgstr ""
 "``clone`` toma cualquiera de los controles anteriores como argumentos de "
 "palabra clave. Cualquier control no especificado en la llamada conserva su "
 "valor predeterminado.  Por lo tanto, puede crear una directiva que utilice "
-"caracteres linesep ``\\r\\n`` como este::"
+"caracteres *linesep* ``\\r\\n`` como este::"
 
 #: ../Doc/whatsnew/3.3.rst:1240
 msgid ""
@@ -2385,7 +2382,7 @@ msgid ""
 msgstr ""
 "Las directivas pueden ser usadas para facilitar la generación de mensajes en "
 "el formato requerido por la aplicación. En vez de tener que recordar "
-"especificar ``linesep='\\r\\n'`` en todos los lugares en donde llamas a "
+"especificar `linesep='\\r\\n'`` en todos los lugares en donde llamas a "
 "``generator``, puedes especificarlo una sola vez cuando estableces la "
 "política usada por el ``analizador`` o el ``Mensaje``, el que tu programa "
 "utilice para crear los objetos ``Mensaje``. Por otra parte, si necesitas "
@@ -3872,14 +3869,13 @@ msgstr ""
 
 # traduzco next protocol negotution?  3860
 #: ../Doc/whatsnew/3.3.rst:1957
-#, fuzzy
 msgid ""
 "Support has been added for the Next Protocol Negotiation extension using "
 "the :meth:`ssl.SSLContext.set_npn_protocols` method. (Contributed by Colin "
 "Marc in :issue:`14204`.)"
 msgstr ""
-"Se ha agregado soporte para la extensión Next Protocol Negotiation usando el "
-"método :meth:`ssl.SSLContext.set_npn_protocols`. (Contribución por Colin "
+"Se ha agregado soporte para la extensión *Next Protocol Negotiation* usando "
+"el método :meth:`ssl.SSLContext.set_npn_protocols`. (Contribución por Colin "
 "Marc en :issue:`14204`.)"
 
 #: ../Doc/whatsnew/3.3.rst:1961
@@ -4159,7 +4155,7 @@ msgstr ""
 "Los métodos :meth:`.assertRaises`, :meth:`.assertRaisesRegex`, :meth:`."
 "assertWarns`, y :meth:`.assertWarnsRegex` ahora aceptan un argumento de "
 "palabra clave *msg* cuando son usados como administradores de contexto. "
-"(Contribución porCalmettes Ezio Melotti y Winston Ewert en :issue:`10775`.)"
+"(Contribución por Ezio Melotti y Winston Ewert en :issue:`10775`.)"
 
 #: ../Doc/whatsnew/3.3.rst:2096
 msgid ""
