se corrigen faltas de ortografía restantes y algunos casos por revisar

--- a/whatsnew/3.3.po
+++ b/whatsnew/3.3.po
@@ -100,7 +100,7 @@ msgstr "Nuevas características incorporadas:"
 
 #: ../Doc/whatsnew/3.3.rst:76
 msgid "Reworked :ref:`I/O exception hierarchy <pep-3151>`."
-msgstr "Se rediseña :ref:`Jerarquía de excepción I/O <pep-3151>` ."
+msgstr "Se reelabora :ref:`Jerarquía de excepción I/O <pep-3151>` ."
 
 #: ../Doc/whatsnew/3.3.rst:78
 msgid "Implementation improvements:"
@@ -766,7 +766,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.3.rst:392
 msgid ":pep:`3151` - Reworking the OS and IO Exception Hierarchy"
-msgstr ":pep:`3151` - Rediseño de la jerarquía de excepciones de IO y OS"
+msgstr ":pep:`3151` - Reelaboración de la jerarquía de excepciones de IO y OS"
 
 #: ../Doc/whatsnew/3.3.rst:393
 msgid "PEP written and implemented by Antoine Pitrou"
@@ -1172,7 +1172,6 @@ msgstr ""
 "completamente como parte del paquete :mod:`importlib`."
 
 #: ../Doc/whatsnew/3.3.rst:711
-#, fuzzy
 msgid ""
 "The abstract base classes defined in :mod:`importlib.abc` have been expanded "
 "to properly delineate between :term:`meta path finders <meta path finder>` "
@@ -1183,12 +1182,13 @@ msgid ""
 "requirements."
 msgstr ""
 "Las clases base abstractas definidas en :mod:`importlib.abc` se han "
-"expandido para delimitar adecuadamente entre :term:`meta path finders <meta "
-"path finder>` y :term:`buscadores de entrada de rutas <path entry finder>` "
-"al introducir la clase :class:`importlib.abc.MetaPathFinder` y :class:"
-"`importlib.abc.PathEntryFinder` respectivamente. El antiguo ABC de la clase :"
-"class:`importlib.abc.Finder` ahora solo se proporciona para compatibilidad "
-"con versiones anteriores y no exige ningún requisito de método."
+"expandido para delimitar adecuadamente entre :term:`buscadores de rutas meta "
+"<meta path finder>` y :term:`buscadores de entrada de rutas <path entry "
+"finder>` al introducir la clase :class:`importlib.abc.MetaPathFinder` y :"
+"class:`importlib.abc.PathEntryFinder` respectivamente. El antiguo ABC de la "
+"clase :class:`importlib.abc.Finder` ahora solo se proporciona para "
+"compatibilidad con versiones anteriores y no exige ningún requisito de "
+"método."
 
 #: ../Doc/whatsnew/3.3.rst:719
 msgid ""
@@ -2395,9 +2395,7 @@ msgstr ""
 msgid "Provisional Policy with New Header API"
 msgstr "Política provisional con nueva API de encabezado"
 
-# provisional polici. drectiv provisional?
 #: ../Doc/whatsnew/3.3.rst:1254
-#, fuzzy
 msgid ""
 "While the policy framework is worthwhile all by itself, the main motivation "
 "for introducing it is to allow the creation of new policies that implement "
@@ -4108,16 +4106,15 @@ msgstr ""
 "Victor Stinner in :issue:`10278`.)"
 
 #: ../Doc/whatsnew/3.3.rst:2072
-#, fuzzy
 msgid ""
 "To improve cross platform consistency, :func:`~time.sleep` now raises a :exc:"
 "`ValueError` when passed a negative sleep value.  Previously this was an "
 "error on posix, but produced an infinite sleep on Windows."
 msgstr ""
 "Para mejorar la consistencia entre plataformas, la función :func:`~time "
-"ahora lanza un :exc:`ValueError` cuando se le pasa un valor negativo. "
-"Anteriormente ésto era un error en posix, pero producía una suspensión "
-"definitiva en windows."
+"ahora lanza un :exc:`ValueError` cuando se le pasa un valor negativo. Esto "
+"era anteriormente un error en posix, pero producía una suspensión definitiva "
+"en windows."
 
 #: ../Doc/whatsnew/3.3.rst:2078
 msgid "types"
@@ -4820,9 +4817,8 @@ msgstr ""
 "asegúrese de llamar a :func:`importlib.invalidate_caches` para limpiar la "
 "caché para que los buscadores encuentren el nuevo archivo."
 
-# check import errors... check no es reconocido, le pongo comillaas o cursiv o q?
+# coloque check en comillas
 #: ../Doc/whatsnew/3.3.rst:2364
-#, fuzzy
 msgid ""
 ":exc:`ImportError` now uses the full name of the module that was attempted "
 "to be imported. Doctests that check ImportErrors' message will need to be "
@@ -4830,8 +4826,8 @@ msgid ""
 "name."
 msgstr ""
 ":exc:`ImportError` ahora usa el nombre completo del módulo que se intentó "
-"importar. Las pruebas de documentos que verifican el mensaje de check "
-"ImportErrors' necesitaran ser actualizados para usar el nombre completo del "
+"importar. Las pruebas de documentos que verifican el mensaje de "
+"'ImportErrors' necesitaran ser actualizados para usar el nombre completo del "
 "módulo en vez de sólo la terminación del nombre."
 
 #: ../Doc/whatsnew/3.3.rst:2369
@@ -4891,9 +4887,7 @@ msgstr ""
 "`sys.path_importer_cache` donde éste represente el uso de buscadores "
 "implícitos, pero semánticamente no debería cambiar nada."
 
-# q haago con ese path entry finder
 #: ../Doc/whatsnew/3.3.rst:2392
-#, fuzzy
 msgid ""
 ":class:`importlib.abc.Finder` no longer specifies a `find_module()` abstract "
 "method that must be implemented. If you were relying on subclasses to "
@@ -4906,9 +4900,8 @@ msgstr ""
 "implementar éste método, primero asegúrese de verificar la existencia del "
 "método. Sin embargo, probablemente desee verificar primero el "
 "`find_loader()`, en el caso de trabajar con los buscadores de entradas :term:"
-"`<path entry finder>`."
+"`<bus>`."
 
-# me confunde lo de los ganchos de importacion...
 #: ../Doc/whatsnew/3.3.rst:2398
 msgid ""
 ":mod:`pkgutil` has been converted to use :mod:`importlib` internally. This "
@@ -4919,7 +4912,14 @@ msgid ""
 "case the standard import hooks so they are still supported even though they "
 "do not provide the non-standard ``iter_modules()`` method."
 msgstr ""
-":mod:`pkgutil` ha sido convertido para usar :mod:`importlib` internamente."
+":mod:`pkgutil` ha sido convertido para usar :mod:`importlib` internamente. "
+"Esto elimina varios casos extremos donde el antiguo comportamiento de la "
+"emulación de importación :pep:`302` fallaba al comparar el comportamiento "
+"del sistema real de importación. La emulación de importación en sí aún está "
+"presente, pero está en desuso. Las funciones: func: `pkgutil.iter_importers` "
+"y: func:` pkgutil.walk_packages` en un caso especial son los ganchos de "
+"importación estándar, por lo que aún son compatibles aunque no proporcionen "
+"el método no estándar `` iter_modules () ``."
 
 #: ../Doc/whatsnew/3.3.rst:2406
 msgid ""
@@ -5057,9 +5057,7 @@ msgstr ""
 msgid "Porting C code"
 msgstr "Portando código C"
 
-# q hago con c:member?
 #: ../Doc/whatsnew/3.3.rst:2463
-#, fuzzy
 msgid ""
 "In the course of changes to the buffer API the undocumented :c:member:"
 "`~Py_buffer.smalltable` member of the :c:type:`Py_buffer` structure has been "
@@ -5093,9 +5091,7 @@ msgstr ""
 "de la reducción de huella de memoria proporcionada por :pep:`393`, usted "
 "debe convertir su código al nuevo :doc:`Unicode API <../c-api/unicode>`."
 
-# Poner UNICODE en cursiva
 #: ../Doc/whatsnew/3.3.rst:2478
-#, fuzzy
 msgid ""
 "However, if you only have been using high-level functions such as :c:func:"
 "`PyUnicode_Concat()`, :c:func:`PyUnicode_Join` or :c:func:"
@@ -5105,7 +5101,7 @@ msgstr ""
 "Sin embargo, si sólo ha estado usando funciones de alto nivel como :c:func:"
 "`PyUnicode_Concat()`, :c:func:`PyUnicode_Join` o :c:func:"
 "`PyUnicode_FromFormat()`, automáticamente su código se beneficiará de las "
-"nuevas representaciones unicode."
+"nuevas representaciones *unicode*."
 
 #: ../Doc/whatsnew/3.3.rst:2483
 msgid ":c:func:`PyImport_GetMagicNumber` now returns ``-1`` upon failure."
