se corrigen algunos espacios

--- a/whatsnew/3.3.po
+++ b/whatsnew/3.3.po
@@ -100,7 +100,7 @@ msgstr "Nuevas características incorporadas:"
 
 #: ../Doc/whatsnew/3.3.rst:76
 msgid "Reworked :ref:`I/O exception hierarchy <pep-3151>`."
-msgstr "Se reelabora :ref:`Jerarquía de excepción I/O <pep-3151>` ."
+msgstr "Se rediseña :ref:`Jerarquía de excepción I/O <pep-3151>` ."
 
 #: ../Doc/whatsnew/3.3.rst:78
 msgid "Implementation improvements:"
@@ -766,7 +766,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.3.rst:392
 msgid ":pep:`3151` - Reworking the OS and IO Exception Hierarchy"
-msgstr ":pep:`3151` - Reelaboración de la jerarquía de excepciones de IO y OS"
+msgstr ":pep:`3151` - Rediseño de la jerarquía de excepciones de IO y OS"
 
 #: ../Doc/whatsnew/3.3.rst:393
 msgid "PEP written and implemented by Antoine Pitrou"
@@ -1836,7 +1836,7 @@ msgid ""
 "number of mappings as a single unit.  (Written by Raymond Hettinger for :"
 "issue:`11089`, made public in :issue:`11297`.)"
 msgstr ""
-"Adición de una nueva :class:`~collections.ChainMap`para permitir el "
+"Adición de una nueva :class:`~collections.ChainMap` para permitir el "
 "tratamiento de un número de asignaciones como una sola unidad. (Escrito por "
 "Raymond Hettinger para :issue:'11089', publicado en :issue:'11297'.)"
 
@@ -4916,10 +4916,10 @@ msgstr ""
 "Esto elimina varios casos extremos donde el antiguo comportamiento de la "
 "emulación de importación :pep:`302` fallaba al comparar el comportamiento "
 "del sistema real de importación. La emulación de importación en sí aún está "
-"presente, pero está en desuso. Las funciones: func: `pkgutil.iter_importers` "
-"y: func:` pkgutil.walk_packages` en un caso especial son los ganchos de "
+"presente, pero está en desuso. Las funciones :func:`pkgutil.iter_importers` "
+"y :func:` pkgutil.walk_packages` en un caso especial son los ganchos de "
 "importación estándar, por lo que aún son compatibles aunque no proporcionen "
-"el método no estándar `` iter_modules () ``."
+"el método no estándar ``iter_modules ()``."
 
 #: ../Doc/whatsnew/3.3.rst:2406
 msgid ""
