--- a/whatsnew/3.3.po
+++ b/whatsnew/3.3.po
@@ -100,7 +100,7 @@ msgstr "Nuevas características incorporadas:"
 
 #: ../Doc/whatsnew/3.3.rst:76
 msgid "Reworked :ref:`I/O exception hierarchy <pep-3151>`."
-msgstr "Se rediseña :ref:`Jerarquía de excepción I/O <pep-3151>` ."
+msgstr "Se re elabora :ref:`Jerarquía de excepción I/O <pep-3151>` ."
 
 #: ../Doc/whatsnew/3.3.rst:78
 msgid "Implementation improvements:"
@@ -766,7 +766,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.3.rst:392
 msgid ":pep:`3151` - Reworking the OS and IO Exception Hierarchy"
-msgstr ":pep:`3151` - Rediseño de la jerarquía de excepciones de IO y OS"
+msgstr ":pep:`3151` - Re elaboración de la jerarquía de excepcion de IO y OS"
 
 #: ../Doc/whatsnew/3.3.rst:393
 msgid "PEP written and implemented by Antoine Pitrou"
