se corrige error en una tilde faltante

--- a/whatsnew/3.3.po
+++ b/whatsnew/3.3.po
@@ -766,7 +766,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.3.rst:392
 msgid ":pep:`3151` - Reworking the OS and IO Exception Hierarchy"
-msgstr ":pep:`3151` - Re elaboración de la jerarquía de excepcion de IO y OS"
+msgstr ":pep:`3151` - Re elaboración de la jerarquía de excepciones de IO y OS"
 
 #: ../Doc/whatsnew/3.3.rst:393
 msgid "PEP written and implemented by Antoine Pitrou"
