--- a/whatsnew/3.2.po
+++ b/whatsnew/3.2.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-01-15 16:05-0300\n"
+"PO-Revision-Date: 2021-01-26 23:15-0300\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -385,24 +385,38 @@ msgid ""
 "from cluttering source directories, the *pyc* files are now collected in a "
 "\"__pycache__\" directory stored under the package directory."
 msgstr ""
+"Para resolver este problema, el mecanismo de importación de Python se ha "
+"ampliado para utilizar nombres de archivo distintos para cada intérprete. En "
+"lugar de que Python 3.2 y Python 3.3 y *Unladen Swallow* compitan por un "
+"archivo llamado \"mymodule.pyc\", ahora buscarán \"mymodule.cpython-32.pyc"
+"\", \"mymodule.cpython-33.pyc\" y \"mymodule .unladen10.pyc\". Y para evitar "
+"que todos estos nuevos archivos abarroten los directorios de origen, los "
+"archivos *pyc* ahora se recopilan en un directorio \"__pycache__\" "
+"almacenado en el directorio del paquete."
 
 #: ../Doc/whatsnew/3.2.rst:311
 msgid ""
 "Aside from the filenames and target directories, the new scheme has a few "
 "aspects that are visible to the programmer:"
 msgstr ""
+"Aparte de los nombres de archivo y directorios de destino, el nuevo esquema "
+"tiene algunos aspectos que son visibles para el programador:"
 
 #: ../Doc/whatsnew/3.2.rst:314
 msgid ""
 "Imported modules now have a :attr:`__cached__` attribute which stores the "
 "name of the actual file that was imported:"
 msgstr ""
+"Los módulos importados ahora tienen un atributo :attr:`__cached__` que "
+"almacena el nombre del archivo real que se importó:"
 
 #: ../Doc/whatsnew/3.2.rst:321
 msgid ""
 "The tag that is unique to each interpreter is accessible from the :mod:`imp` "
 "module:"
 msgstr ""
+"La etiqueta que es única para cada intérprete es accesible desde el módulo :"
+"mod:`imp`:"
 
 #: ../Doc/whatsnew/3.2.rst:328
 msgid ""
@@ -410,6 +424,10 @@ msgid ""
 "to be smarter.  It is no longer sufficient to simply strip the \"c\" from a "
 "\".pyc\" filename.  Instead, use the new functions in the :mod:`imp` module:"
 msgstr ""
+"Los scripts que intentan deducir el nombre del archivo de origen del archivo "
+"importado ahora deben ser más inteligentes. Ya no es suficiente simplemente "
+"quitar la \"c\" final del nombre de archivo \".pyc\". En su lugar, use las "
+"nuevas funciones del módulo :mod:`imp`:"
 
 #: ../Doc/whatsnew/3.2.rst:337
 msgid ""
@@ -419,6 +437,12 @@ msgid ""
 "files and directories to compile and ``-b`` which causes bytecode files to "
 "be written to their legacy location rather than *__pycache__*."
 msgstr ""
+"Los módulos :mod:`py_compile` y :mod:`compileall` se han actualizado para "
+"reflejar la nueva convención de nomenclatura y el directorio de destino. La "
+"invocación por línea de comandos de *compileall* tiene nuevas opciones: ``-"
+"i`` para especificar una lista de archivos y directorios para compilar y ``-"
+"b`` que hace que los archivos de código de bytes se escriban en su ubicación "
+"heredada en lugar de *__pycache__*."
 
 #: ../Doc/whatsnew/3.2.rst:344
 msgid ""
@@ -428,18 +452,24 @@ msgid ""
 "PyPycLoader`, have been deprecated (instructions on how to stay Python 3.1 "
 "compatible are included with the documentation)."
 msgstr ""
+"El módulo :mod:`importlib.abc` se ha actualizado con una nueva :term:`clase "
+"base abstracta <abstract base class>` para cargar archivos de código de "
+"bytes. Las ABC (por sus siglas en inglés *abstract base class*) obsoletas, :"
+"class:`~importlib.abc.PyLoader` y :class:`~ importlib.abc.PyPycLoader`, han "
+"sido deprecadas (las instrucciones sobre cómo mantener la compatibilidad con "
+"Python 3.1 se incluyen con la documentación)."
 
 #: ../Doc/whatsnew/3.2.rst:352
 msgid ":pep:`3147` - PYC Repository Directories"
-msgstr ""
+msgstr ":pep:`3147` - Directorio del repositorio PYC"
 
 #: ../Doc/whatsnew/3.2.rst:353 ../Doc/whatsnew/3.2.rst:384
 msgid "PEP written by Barry Warsaw."
-msgstr ""
+msgstr "PEP escrito por Barry Warsaw."
 
 #: ../Doc/whatsnew/3.2.rst:357
 msgid "PEP 3149: ABI Version Tagged .so Files"
-msgstr ""
+msgstr "PEP 3149: Archivos .so con etiquetado de versión para ABI"
 
 #: ../Doc/whatsnew/3.2.rst:359
 msgid ""
@@ -447,6 +477,10 @@ msgid ""
 "located.  This PEP implements a similar mechanism for shared object files by "
 "giving them a common directory and distinct names for each version."
 msgstr ""
+"El directorio del repositorio PYC permite la ubicación conjunta de varios "
+"archivos de cache en código de bytes. Este PEP implementa un mecanismo "
+"similar para los archivos de objetos compartidos dándoles un directorio "
+"común y nombres distintos para cada versión."
 
 #: ../Doc/whatsnew/3.2.rst:363
 msgid ""
