se eliminan espacios en blanco que faltaba eliminar

--- a/whatsnew/3.3.po
+++ b/whatsnew/3.3.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-01-27 14:27-0400\n"
+"PO-Revision-Date: 2021-01-28 15:10-0400\n"
 "Last-Translator: Yohanna Padrino <yohanazareth2693@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -371,8 +371,8 @@ msgstr ""
 msgid ""
 "For further changes see `Build and C API Changes`_ and `Porting C code`_."
 msgstr ""
-"Para más cambios, consulte `Compilación y cambios en la API de C`_ y ` "
-"Portabilidad del código C`_."
+"Para más cambios, consulte `Compilación y cambios en la API de C`_ y "
+"`Portabilidad del código C`_."
 
 #: ../Doc/whatsnew/3.3.rst:199
 msgid "(Contributed by Stefan Krah in :issue:`10181`.)"
@@ -1214,8 +1214,8 @@ msgstr ""
 "FileLoader` ayuda a escribir un cargador que usa el sistema de archivos como "
 "mecanismo de almacenamiento para el código de un módulo. El cargador de "
 "archivos fuente (:class:`importlib.machinery.SourceFileLoader`), archivos de "
-"código byte sin fuente (:class: `importlib.machinery.SourcelessFileLoader`) "
-"y módulos de extensión (:class:`importlib.machinery.ExtensionFileLoader`) "
+"código byte sin fuente (:class:`importlib.machinery.SourcelessFileLoader`) y "
+"módulos de extensión (:class:`importlib.machinery.ExtensionFileLoader`) "
 "ahora están disponibles para su uso directo."
 
 #: ../Doc/whatsnew/3.3.rst:731
@@ -1263,7 +1263,7 @@ msgid ""
 "that one can now easily remove or change the order of the various finders to "
 "fit one's needs."
 msgstr ""
-"Más allá de la extensión de lo que ahora expone :mod:ʻimportlib`, hay otros "
+"Más allá de la extensión de lo que ahora expone :mod:`importlib`, hay otros "
 "cambios visibles para importar. El más grande es que :attr:`sys.meta_path` "
 "y :attr:`sys.path_hooks` ahora almacenan todos los buscadores de rutas meta "
 "y los ganchos de entrada de rutas usados por la importación. Anteriormente, "
@@ -1450,10 +1450,10 @@ msgid ""
 "`PyImport_ImportModuleNoBlock` C API function."
 msgstr ""
 "Las versiones anteriores de CPython siempre se han basado en un bloqueo de "
-"importación global. Ésto conduce a problemas inesperados tales como ..... "
+"importación global. Ésto conduce a problemas inesperados tales como bloqueos "
 "cuando la importación un módulo debería disparar la ejecución de código en "
 "un hilo diferente como un efecto secundario. A veces se empleaban soluciones "
-"torpes, como la función de API C: c:func:`PyImport_ImportModuleNoBlock`."
+"torpes, como la función de API C: c:func:`PyImport_ImportModuleNoBlock` ."
 
 #: ../Doc/whatsnew/3.3.rst:831
 msgid ""
@@ -1546,7 +1546,7 @@ msgid ""
 "startup by setting the :envvar:`PYTHONFAULTHANDLER` environment variable or "
 "by using :option:`-X` ``faulthandler`` command line option."
 msgstr ""
-"Este nuevo módulo de depuración: mod: `failhandler` contiene funciones para "
+"Este nuevo módulo de depuración :mod:`faulthandler` contiene funciones para "
 "volcar los rastreos de Python explícitamente, en una falla (como una falla "
 "de segmentación), después de un tiempo de espera o en una señal de usuario. "
 "Llame a :func:`faulthandler.enable` para instalar controladores de fallas "
@@ -2177,7 +2177,7 @@ msgid ""
 msgstr ""
 "En las plantillas de contexto (:class:`~decimal.DefaultContext`, :class:"
 "`~decimal.BasicContext` and :class:`~decimal.ExtendedContext`) la magnitud "
-"de :attr:~decimal.Context.Emax` y :attr:`~decimal.Context.Emin` se ha "
+"de :attr:`~decimal.Context.Emax` y :attr:`~decimal.Context.Emin` se ha "
 "cambiado a :const:`999999`."
 
 #: ../Doc/whatsnew/3.3.rst:1152
@@ -2288,11 +2288,11 @@ msgstr ""
 "especificar una ``policy`` cuando un mensaje de correo electrónico es "
 "analizado por un :mod:`~email.parser`, o cuando se crea un objeto :class:"
 "`~email.message.Message`, o cuando se serializa un correo electrónico "
-"mediante un :mod:`~email.generator`.  A menos que se invalide, una política "
+"mediante un :mod:`~email.generator`. A menos que se invalide, una política "
 "pasada a un ``parser`` es heredada por todos los objetos ``Message`` y los "
 "subobjetos creados por el ``parser``. De forma predeterminada, un "
 "``generator`` utilizará la política del objeto ``Message`` que está "
-"serializando.  La directiva predeterminada es :data:`~email.policy.compat32`."
+"serializando. La directiva predeterminada es :data:`~email.policy.compat32`."
 
 #: ../Doc/whatsnew/3.3.rst:1210
 msgid "The minimum set of controls implemented by all ``policy`` objects are:"
@@ -2436,7 +2436,7 @@ msgid ""
 "get refolded, and ``all`` means that all lines get refolded."
 msgstr ""
 "Controla si los encabezados analizados por un :mod:`~email.parser` son "
-"replegados por :mod:~ email.generator`. Éste puede ser ``none``, ``long``, o "
+"replegados por :mod:~`email.generator`. Éste puede ser ``none``, ``long``, o "
 "``all``. El valor por defecto es ``long``, lo que significa que los "
 "encabezados principales con una linea más larga que ``max_line_length`` se "
 "repliegan. ``none`` significa que no se repliega ninguna linea, y ``all`` "
@@ -2672,7 +2672,7 @@ msgid ""
 "`3709`.)"
 msgstr ""
 ":class:`http.server.BaseHTTPRequestHandler` ahora almacena en buffer los "
-"encabezados y los escribe todos a la vez cuando se llama a : meth:`~http."
+"encabezados y los escribe todos a la vez cuando se llama a :meth:`~http."
 "server.BaseHTTPRequestHandler.end_headers`. Se puede usar un nuevo método :"
 "meth:`~ http.server.BaseHTTPRequestHandler.flush_headers` para administrar "
 "directamente cuándo se envían los encabezados acumulados. (Contribución por "
@@ -3223,7 +3223,7 @@ msgid ""
 ":func:`~os.pwrite`: Write to a file descriptor from an offset, leaving the "
 "file offset unchanged."
 msgstr ""
-": func: `~ os.pwrite`: Escribe en un descriptor de archivo desde un "
+":func:`~ os.pwrite`: Escribe en un descriptor de archivo desde un "
 "desplazamiento, dejando el desplazamiento del archivo sin cambios."
 
 #: ../Doc/whatsnew/3.3.rst:1678
@@ -3838,7 +3838,7 @@ msgid ""
 "`13626` and :issue:`13627`.)"
 msgstr ""
 "El intercambio de claves Diffie-Hellman, tanto regular como basado en curvas "
-"elípticas, ahora se admite a través de los métodos :meth: `~ ssl.SSLContext."
+"elípticas, ahora se admite a través de los métodos :meth:`~ ssl.SSLContext."
 "load_dh_params` y :meth:`~ssl.SSLContext.set_ecdh_curve`. (Contribución de "
 "Antoine Pitrou en :issue:`13626` y :issue:`13627`.)"
 
@@ -4112,7 +4112,7 @@ msgid ""
 "error on posix, but produced an infinite sleep on Windows."
 msgstr ""
 "Para mejorar la consistencia entre plataformas, la función :func:`~time."
-"sleep`ahora lanza un :exc:`ValueError` cuando se le pasa un valor negativo. "
+"sleep` ahora lanza un :exc:`ValueError` cuando se le pasa un valor negativo. "
 "Esto era anteriormente un error en posix, pero producía una suspensión "
 "definitiva en windows."
 
@@ -4917,7 +4917,7 @@ msgstr ""
 "emulación de importación :pep:`302` fallaba al comparar el comportamiento "
 "del sistema real de importación. La emulación de importación en sí aún está "
 "presente, pero está en desuso. Las funciones :func:`pkgutil.iter_importers` "
-"y :func:` pkgutil.walk_packages` en un caso especial son los ganchos de "
+"y :func:`pkgutil.walk_packages` en un caso especial son los ganchos de "
 "importación estándar, por lo que aún son compatibles aunque no proporcionen "
 "el método no estándar ``iter_modules ()`."
 
@@ -4935,7 +4935,7 @@ msgid ""
 "already present in the input strings."
 msgstr ""
 "Se ha corregido un error de larga data de cumplimiento de RFC (:issue:"
-"`1079`) en el análisis realizado por :func:` email.header.decode_header`. El "
+"`1079`) en el análisis realizado por :func:`email.header.decode_header`. El "
 "código que usa el lenguaje estándar para convertir encabezados codificados "
 "en *unicode* (``str (make_header (decode_header (h))``) no verá cambios, "
 "pero el código que mira las tuplas individuales retornadas por decode_header "
