se eliminan espacios en blanco

--- a/whatsnew/3.3.po
+++ b/whatsnew/3.3.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-01-28 15:10-0400\n"
+"PO-Revision-Date: 2021-01-29 15:18-0400\n"
 "Last-Translator: Yohanna Padrino <yohanazareth2693@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -1453,7 +1453,7 @@ msgstr ""
 "importación global. Ésto conduce a problemas inesperados tales como bloqueos "
 "cuando la importación un módulo debería disparar la ejecución de código en "
 "un hilo diferente como un efecto secundario. A veces se empleaban soluciones "
-"torpes, como la función de API C: c:func:`PyImport_ImportModuleNoBlock` ."
+"torpes, como la función de API C :c:func:`PyImport_ImportModuleNoBlock` ."
 
 #: ../Doc/whatsnew/3.3.rst:831
 msgid ""
@@ -1551,7 +1551,7 @@ msgstr ""
 "de segmentación), después de un tiempo de espera o en una señal de usuario. "
 "Llame a :func:`faulthandler.enable` para instalar controladores de fallas "
 "para las señales :const:`SIGSEGV`, :const:`SIGFPE`, :const:`SIGABRT`, :const:"
-"`SIGBUS`, y :const:` SIGILL` . También puede habilitarlos al inicio "
+"`SIGBUS`, y :const:`SIGILL` . También puede habilitarlos al inicio "
 "configurando la variable de entorno :envvar:`PYTHONFAULTHANDLER` o usando la "
 "opción de línea de comandos :option:`-X` ``faulthandler`` ."
 
@@ -2304,15 +2304,14 @@ msgstr ""
 msgid "max_line_length"
 msgstr "max_line_length"
 
-# como pongo linesep? en cursivas o q?
 #: ../Doc/whatsnew/3.3.rst:1215
 msgid ""
 "The maximum length, excluding the linesep character(s), individual lines may "
 "have when a ``Message`` is serialized.  Defaults to 78."
 msgstr ""
-"La longitud máxima, excluyendo el(los) caracter(es) linesep, que las líneas "
-"individuales pueden tener cuando un ``Message`` se serializa es por defecto "
-"de 78."
+"La longitud máxima, excluyendo el(los) caracter(es) *linesep*, que las "
+"líneas individuales pueden tener cuando un ``Message`` se serializa es por "
+"defecto de 78."
 
 #: ../Doc/whatsnew/3.3.rst:1219
 msgid "linesep"
@@ -2436,7 +2435,7 @@ msgid ""
 "get refolded, and ``all`` means that all lines get refolded."
 msgstr ""
 "Controla si los encabezados analizados por un :mod:`~email.parser` son "
-"replegados por :mod:~`email.generator`. Éste puede ser ``none``, ``long``, o "
+"replegados por :mod:`~email.generator`. Éste puede ser ``none``, ``long``, o "
 "``all``. El valor por defecto es ``long``, lo que significa que los "
 "encabezados principales con una linea más larga que ``max_line_length`` se "
 "repliegan. ``none`` significa que no se repliega ninguna linea, y ``all`` "
